Typo in Font-Awesome

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <li>Automatically binds standard hotkeys for common operations on Mac and Windows</li>
             <li>Drag and drop files to insert images, support image upload (also taking photos on mobile devices)</li>
             <li>Voice dictation input (only in Chrome)</li>
-            <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, FortAwesome and so on...</li>
+            <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, Font-Awesome and so on...</li>
             <li>Does not force any styling - it's all up to you</li>
             <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="https://developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
             <li>Does not create a separate frame, backup text areas etc - instead keeps it simple and runs everything inline in a DIV</li>
