--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
     <title>Tiny, opensource, Bootstrap WYSIWYG rich text editor from MindMup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="opensource rich wysiwyg text editor jquery bootstrap execCommand html5" />
-    <meta name="description" content="This tiny JQuery Bootstrap WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
+    <meta name="description" content="This tiny jQuery Bootstrap WYSIWYG plugin turns any DIV into a HTML5 rich text editor" />
     <link rel="apple-touch-icon" href="//mindmup.s3.amazonaws.com/lib/img/apple-touch-icon.png" />
-    <link rel="shortcut icon" href="http://mindmup.s3.amazonaws.com/lib/img/favicon.ico" >
-    <link href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
-		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-		<script src="https://mindmup.s3.amazonaws.com/lib/jquery.hotkeys.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-    <script src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+    <link rel="shortcut icon" href="//mindmup.s3.amazonaws.com/lib/img/favicon.ico" >
+    <link href="//twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
 		<link href="index.css" rel="stylesheet">
-    <script src="bootstrap-wysiwyg.js"></script>
   </head>
   <body>
 
 <div class="container">
   <div class="hero-unit">
   <div class="pull-right">
-	<div class="fb-like" data-href="http://facebook.com/mindmupapp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div><br/>
-    <a href="https://twitter.com/mindmup" class="twitter-follow-button" data-show-count="true" data-show-screen-name="true" data-lang="en">Follow @mindmup</a> 
+	<div class="fb-like" data-href="//facebook.com/mindmupapp" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div><br/>
+    <a href="//twitter.com/mindmup" class="twitter-follow-button" data-show-count="true" data-show-screen-name="true" data-lang="en">Follow @mindmup</a>
   </div>
 	<h1>bootstrap-wysiwyg <br/> <small>tiny wysiwyg rich text editor for Bootstrap</small></h1>
     <hr/>
@@ -38,9 +33,9 @@
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
-          <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
-          <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
-          <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
+            <li><a data-edit="fontSize 5"><font size="5">Huge</font></a></li>
+            <li><a data-edit="fontSize 3"><font size="3">Normal</font></a></li>
+            <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
           </ul>
       </div>
       <div class="btn-group">
@@ -56,10 +51,10 @@
         <a class="btn" data-edit="indent" title="Indent (Tab)"><i class="icon-indent-right"></i></a>
       </div>
       <div class="btn-group">
-        <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i></a>
-        <a class="btn" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="icon-align-center"></i></a>
-        <a class="btn" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="icon-align-right"></i></a>
-        <a class="btn" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="icon-align-justify"></i></a>
+        <a class="btn" data-edit="justifyleft" title="Align Left (Ctrl+L)"><i class="icon-align-left"></i></a>
+        <a class="btn" data-edit="justifycenter" title="Center (Ctrl+E)"><i class="icon-align-center"></i></a>
+        <a class="btn" data-edit="justifyright" title="Align Right (Ctrl+R)"><i class="icon-align-right"></i></a>
+        <a class="btn" data-edit="justifyfull" title="Justify (Ctrl+J)"><i class="icon-align-justify"></i></a>
       </div>
       <div class="btn-group">
 		  <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="icon-link"></i></a>
@@ -70,7 +65,7 @@
         <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="icon-cut"></i></a>
 
       </div>
-      
+
       <div class="btn-group">
         <a class="btn" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="icon-picture"></i></a>
         <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
@@ -91,20 +86,17 @@
     <div class="span6">
           <h2>About</h2>
           <p>
-          This <a href="https://github.com/mindmup/bootstrap-wysiwyg/blob/master/bootstrap-wysiwyg.js">tiny (5KB, &lt; 200 lines) JQuery Bootstrap plugin</a> turns any DIV into a WYSIWYG
-          rich-content editor, inspired by <a href="http://premiumsoftware.net/cleditor/">CLEditor</a> and
-              <a href="http://jhollingworth.github.com/bootstrap-wysihtml5/">bootstrap-wysihtml5</a>. 
-          Here are the key features:
-      </p>
+            This <a href="//github.com/mindmup/bootstrap-wysiwyg/blob/master/bootstrap-wysiwyg.js">tiny (5KB, &lt; 200 lines) jQuery Bootstrap plugin</a> turns any DIV into a WYSIWYG rich-content editor, inspired by <a href="//premiumsoftware.net/cleditor/">CLEditor</a> and <a href="//jhollingworth.github.com/bootstrap-wysihtml5/">bootstrap-wysihtml5</a>. Here are the key features:
+          </p>
           <ul>
             <li>Automatically binds standard hotkeys for common operations on Mac and Windows</li>
             <li>Drag and drop files to insert images, support image upload (also taking photos on mobile devices)</li>
             <li>Voice dictation input (only in Chrome)</li>
             <li>Allows a custom built toolbar, no magic markup generators, enabling the web site to use all the goodness of Bootstrap, Font Awesome and so on...</li>
             <li>Does not force any styling - it's all up to you</li>
-            <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="https://developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
+            <li>Uses standard browser features, no magic non-standard code, toolbar and keyboard configurable to execute any <a href="//developer.mozilla.org/en/docs/Rich-Text_Editing_in_Mozilla">supported browser command</a></li>
             <li>Does not create a separate frame, backup text areas etc - instead keeps it simple and runs everything inline in a DIV</li>
-            <li>(Optionally) cleans up trailing whitespace and empty divs and spans</li> 
+            <li>(Optionally) cleans up trailing whitespace and empty divs and spans</li>
             <li>Requires a modern browser (tested in Chrome 26, Firefox 19, Safari 6, reported by users to work in IE10)</li>
             <li>Supports mobile devices (tested on IOS 6 Ipad/Iphone and Android 4.1.1 Chrome)</li>
           </ul>
@@ -112,104 +104,83 @@
 
         <h2>Why?</h2>
 
-        <a href="http://www.mindmup.com"><img class="span5" src="promo-868x350.png"></a>
+        <a href="//www.mindmup.com"><img class="span5" src="promo-868x350.png"></a>
         <br clear="all" />
         <p>
-          While building a content editor for <a href="http://www.mindmup.com">MindMup</a> we found plenty of good HTML5 WYSWYG editors online, but most were duplicating
-          functionality that already exists in JQuery and Bootstrap, implementing things that were meanwhile added to HTML5 and supported in major browsers, 
-          or doing too much magic such as inserting IFrames with backup text-areas. Most of this was to work around quirks in older browsers (which we didn't need) and 
-          caused focus problems on touch devices (which was an issue for us). Too much magic caused problems with 
-          bootstrap modals (a must for us). Most editors also build their own toolbars, which embed additional CSS and images and always 
-          turn out to be much worse than standard Bootstrap buttons. </p>
-          <p>It turns out, with HTML5, everything we need can fit into less than 5K. We built this tiny tiny editor that does everything we need, does not impose
-          any particular additional CSS and uses modern browser functionality without reimplementing JQuery and Bootstrap. </p>
-          <p>It's released under the MIT license, so fork and enjoy!  </p>
-
-
-
+          While building a content editor for <a href="//www.mindmup.com">MindMup</a> we found plenty of good HTML5 WYSWYG editors online, but most were duplicating functionality that already exists in jQuery and Bootstrap, implementing things that were meanwhile added to HTML5 and supported in major browsers, or doing too much magic such as inserting IFrames with backup text-areas. Most of this was to work around quirks in older browsers (which we didn't need) and caused focus problems on touch devices (which was an issue for us). Too much magic caused problems with bootstrap modals (a must for us). Most editors also build their own toolbars, which embed additional CSS and images and always turn out to be much worse than standard Bootstrap buttons.
+        </p>
+        <p>
+          It turns out, with HTML5, everything we need can fit into less than 5K. We built this tiny tiny editor that does everything we need, does not impose any particular additional CSS and uses modern browser functionality without reimplementing jQuery and Bootstrap.
+        </p>
+        <p>
+          It's released under the MIT license, so fork and enjoy!
+        </p>
     </div>
-    <div class="span6" >
+    <div class="span6">
       <h2>Usage</h2>
-      <pre class="prettyprint linenums">$('#editor').wysiwyg();</pre>    
-<p>Don't forget to style your editor div:</p>
-<pre class="prettyprint linenums">
- #editor {overflow:scroll; max-height:300px}
-</pre>
-<p>If you want to use this for a mobile web site, make sure to read about
-<a href="https://github.com/mindmup/bootstrap-wysiwyg#styling-for-mobile-devices">how to style it</a> to optimise mobile screen usage and experience (please note that this 
-demo page isn't optimised for mobile access).</p>
+      <pre class="prettyprint linenums">$('#editor').wysiwyg();</pre>
+
+      <p>Don't forget to style your editor div:</p>
+      <pre class="prettyprint linenums">
+       #editor {overflow:scroll; max-height:300px}
+      </pre>
+
+      <p>If you want to use this for a mobile web site, make sure to read about
+      <a href="//github.com/mindmup/bootstrap-wysiwyg#styling-for-mobile-devices">how to style it</a> to optimise mobile screen usage and experience (please note that this demo page isn't optimised for mobile access).</p>
 
       <p>Optionally, also create a toolbar (see the source of this page for an example):</p>
-<pre class="prettyprint linenums">
-&lt;div class="btn-toolbar" data-role="editor-toolbar"
-        data-target="#editor"&gt;
-  ...
-&lt;/div&gt; 
-</pre>
-<p>In the toolbar, execute simple commands by adding a data-edit attribute to a link.<p>
-<pre class="prettyprint linenums">
-  &lt;a data-edit="bold"&gt;...&lt;/a&gt;
-</pre>
-<p>execute more complex commands by adding an argument after a blank or providing an input with a data-edit command (the input value is used as an argument). In case of 
-file inputs, the file contents are read in using the FileReader API and used as the command value.<p>
-<pre class="prettyprint linenums">
-&lt;a data-edit="fontName Arial"&gt;...&lt;/a&gt;
-...
-&lt;input type="text" data-edit="createLink"/&gt;
-...
-&lt;input type="file" data-edit="insertImage" /&gt;
-</pre>
-<p>Use standard JQuery methods to access and set content and focus. You can also ask for cleaned up HTML content:</p>
-<pre class="prettyprint linenums">
- $('#editor').cleanHtml()
-</pre>
+      <pre class="prettyprint linenums">
+      &lt;div class="btn-toolbar" data-role="editor-toolbar"
+              data-target="#editor"&gt;
+        ...
+      &lt;/div&gt;
+      </pre>
 
-			 <p style="text-align:center;">
-				<a class="btn btn-large btn-primary jumbo" href="https://github.com/mindmup/bootstrap-wysiwyg/">View project on Github</a>
-      </p>
-			 <p style="text-align:center; margin-top:20px">
-        <a class="btn" href="mailto:contact@mindmup.com"><i class="icon-envelope"></i></a>
-          <a class="btn" href="http://facebook.com/mindmupapp"><i class="icon-facebook"></i></a>
-          <a class="btn" href="http://twitter.com/mindmup"><i class="icon-twitter"></i></a>
-          <a class="btn" href="https://plus.google.com/u/0/communities/112831595986131146219"><i class="icon-google-plus"></i></a>
+      <p>In the toolbar, execute simple commands by adding a data-edit attribute to a link.<p>
+      <pre class="prettyprint linenums">
+        &lt;a data-edit="bold"&gt;...&lt;/a&gt;
+      </pre>
+
+      <p>execute more complex commands by adding an argument after a blank or providing an input with a data-edit command (the input value is used as an argument). In case of
+      file inputs, the file contents are read in using the FileReader API and used as the command value.<p>
+      <pre class="prettyprint linenums">
+      &lt;a data-edit="fontName Arial"&gt;...&lt;/a&gt;
+      ...
+      &lt;input type="text" data-edit="createLink"/&gt;
+      ...
+      &lt;input type="file" data-edit="insertImage" /&gt;
+      </pre>
+
+      <p>Use standard jQuery methods to access and set content and focus. You can also ask for cleaned up HTML content:</p>
+      <pre class="prettyprint linenums">
+       $('#editor').cleanHtml()
+      </pre>
+
+      <div class="contact">
+        <p>
+    		  <a class="btn btn-large btn-primary jumbo" href="//github.com/mindmup/bootstrap-wysiwyg/">View project on Github</a>
         </p>
-
-          
+        <p>
+          <a class="btn" href="mailto:contact@mindmup.com"><i class="icon-envelope"></i></a>
+          <a class="btn" href="//facebook.com/mindmupapp"><i class="icon-facebook"></i></a>
+          <a class="btn" href="//twitter.com/mindmup"><i class="icon-twitter"></i></a>
+          <a class="btn" href="//plus.google.com/u/0/communities/112831595986131146219"><i class="icon-google-plus"></i></a>
+        </p>
+      </div>
 		</div>
 	</div>
 </div>
-<script>
-  $(function(){
-    function initToolbarBootstrapBindings() {
-      var fonts = ['Serif', 'Sans', 'Arial', 'Arial Black', 'Courier', 
-            'Courier New', 'Comic Sans MS', 'Helvetica', 'Impact', 'Lucida Grande', 'Lucida Sans', 'Tahoma', 'Times',
-            'Times New Roman', 'Verdana'],
-            fontTarget = $('[title=Font]').siblings('.dropdown-menu');
-      $.each(fonts, function (idx, fontName) {
-          fontTarget.append($('<li><a data-edit="fontName ' + fontName +'" style="font-family:\''+ fontName +'\'">'+fontName + '</a></li>'));
-      });
-      $('a[title]').tooltip({container:'body'});
-    	$('.dropdown-menu input').click(function() {return false;})
-		    .change(function () {$(this).parent('.dropdown-menu').siblings('.dropdown-toggle').dropdown('toggle');})
-        .keydown('esc', function () {this.value='';$(this).change();});
 
-      $('[data-role=magic-overlay]').each(function () { 
-        var overlay = $(this), target = $(overlay.data('target')); 
-        overlay.css('opacity', 0).css('position', 'absolute').offset(target.offset()).width(target.outerWidth()).height(target.outerHeight());
-      });
-      if ("onwebkitspeechchange"  in document.createElement("input")) {
-        var editorOffset = $('#editor').offset();
-        $('#voiceBtn').css('position','absolute').offset({top: editorOffset.top, left: editorOffset.left+$('#editor').innerWidth()-35});
-      } else {
-        $('#voiceBtn').hide();
-      }
-    };
-    initToolbarBootstrapBindings();  
-    $('#editor').wysiwyg();
-    window.prettyPrint && prettyPrint();
-  });
-</script>
-<a href="https://github.com/mindmup/bootstrap-wysiwyg/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="//mindmup.s3.amazonaws.com/lib/jquery.hotkeys.js"></script>
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+<script src="//twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+<script src="bootstrap-wysiwyg.js"></script>
+<script src="initial-bootstrap.js"></script>
+
+<a href="//github.com/mindmup/bootstrap-wysiwyg/">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" src="//s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub">
+</a>
 <div id="fb-root"></div>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -223,11 +194,11 @@ file inputs, the file contents are read in using the FileReader API and used as 
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "http://connect.facebook.net/en_GB/all.js#xfbml=1";
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
  </script>
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 </html>
