Add Format menu
Added a format menu using formatblock for execCommand

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
           <li><a data-edit="fontSize 1"><font size="1">Small</font></a></li>
           </ul>
       </div>
+      
+      <div class="btn-group">
+        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Font Size">Format&nbsp;<b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a class="btn" data-edit="formatblock h1" title="H1"><font size="5">Heading 1</font></a></li>
+            <li><a class="btn" data-edit="formatblock h2" title="H2"><font size="4">Heading 2</font></a></li>
+            <li><a class="btn" data-edit="formatblock h3" title="H3"><font size="3">Heading 3</font></a></li>
+            <li><a class="btn" data-edit="formatblock h4" title="H4"><font size="2">Heading 2</font></a></li>
+            <li><a class="btn" data-edit="formatblock h5" title="H5"><font size="1">Heading 1</font></a></li>
+          </ul>
+      </div>
+
       <div class="btn-group">
         <a class="btn" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i></a>
         <a class="btn" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i></a>
